--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -7,6 +7,6 @@
 // By default each design mode includes these shared imports.
 // App Shared Sass variables belong in app.variables.scss.
 
-@import "../pages/getting-started/getting-started";
-
 @import "../pages/list/list";
+
+@import "../pages/campaigns-list/campaigns-list.scss";
