basic campaign detail

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,3 +10,5 @@
 @import "../pages/list/list";
 
 @import "../pages/campaigns-list/campaigns-list.scss";
+
+@import "../pages/campaign-detail/campaign-detail.scss";
