--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -8,7 +8,6 @@
 // App Shared Sass variables belong in app.variables.scss.
 
 @import "../pages/list/list";
-
 @import "../pages/campaigns-list/campaigns-list.scss";
-
 @import "../pages/campaign-detail/campaign-detail.scss";
+@import "../pages/product-detail/product-detail.scss";
