--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,3 +11,4 @@
 @import "../pages/campaigns-list/campaigns-list.scss";
 @import "../pages/campaign-detail/campaign-detail.scss";
 @import "../pages/product-detail/product-detail.scss";
+@import "../pages/image-detail/image-detail.scss";
