image slider css fix, redirect to bonami.cz from product list

--- a/app/pages/product-detail/product-detail.scss
+++ b/app/pages/product-detail/product-detail.scss
@@ -1,7 +1,28 @@
 .product-detail {
-
-	scroll-content {
-		display: block;
+	scroll-content{
 		position: relative;
+		padding: 0;
+	}
+
+	.imageSlider {
+		padding: 0;
+		margin: 0;
+
+		scroll-content{
+			padding: 0;
+		}
+
+		.item {
+			padding-left: 0;
+		}
+
+		ion-row {
+			padding-left: 0;
+			padding-right: 0;
+		}
+
+		.img-0 {
+			margin-left: -5px;
+		}
 	}
 }
