--- a/app/pages/campaigns-list/campaigns-list.scss
+++ b/app/pages/campaigns-list/campaigns-list.scss
@@ -1,3 +1,17 @@
 .campaigns-list {
 
+	.loader {
+		position: relative;
+		top: 50%;
+		left: 50%;
+		width: 32px;
+		height: 32px;
+		-webkit-animation: spin 1.2s linear infinite;
+		-moz-animation: spin 1.2s linear infinite;
+		animation: spin 1.2s linear infinite;
+	}
+	@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+	@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+	@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform: rotate(360deg); } }
+
 }
