Navbar color and logo

--- a/app/pages/campaigns-list/campaigns-list.scss
+++ b/app/pages/campaigns-list/campaigns-list.scss
@@ -1,3 +1,14 @@
+.campaigns-list-page {
+	.toolbar-title {
+		height: 70%;
+		img {
+			height: 100%;
+			max-height: 3rem;
+			max-width: 14rem;
+		}
+	}
+}
+
 .campaigns-list {
 
 	.loader {
