--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,3 +12,9 @@
 @import "../pages/campaign-detail/campaign-detail.scss";
 @import "../pages/product-detail/product-detail.scss";
 @import "../pages/image-detail/image-detail.scss";
+
+// Navbar bottom border
+.toolbar-background {
+  border-width: 0 0 1px;
+  border-style: solid;
+}
