Navbar logo alignment

--- a/app/pages/campaigns-list/campaigns-list.scss
+++ b/app/pages/campaigns-list/campaigns-list.scss
@@ -1,10 +1,13 @@
 .campaigns-list-page {
+
+	// Navbar logo alignments
 	.toolbar-title {
 		height: 70%;
 		img {
 			height: 100%;
 			max-height: 3rem;
 			max-width: 14rem;
+			vertical-align: middle;
 		}
 	}
 }
