--- a/app/pages/product-detail/product-detail.scss
+++ b/app/pages/product-detail/product-detail.scss
@@ -77,4 +77,9 @@
 		max-width: 50%;
 		white-space: normal;
 	}
+
+	.product-detail-description {
+		font-family: $fontFamilyBonamiLight;
+		line-height: 2.3rem;
+	}
 }
