--- a/app/pages/product-detail/product-detail.scss
+++ b/app/pages/product-detail/product-detail.scss
@@ -84,7 +84,12 @@
 			}
 
 			.text {
+				display: inline-block;
 				line-height: 1.4;
+			}
+
+			.text:first-letter {
+				text-transform: capitalize;
 			}
 		}
 	}
