--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -38,6 +38,7 @@ $colors: (
 $emerald: #37cd62;
 $text-90-black: #1a1a1a;
 $text-80-black: #4a4a4a;
+$lemonday: #4cc1cd;
 
 // Bonami fonts
 $fontFamilyBonamiNormal: "bnmType500", "Helvetica Neue", sans-serif;
