--- a/app/pages/product-detail/product-detail.scss
+++ b/app/pages/product-detail/product-detail.scss
@@ -34,9 +34,9 @@
 
 	.buttonMedium {
 		font-size: 0.9em;
-		height: 4em;
+		height: 3.5em;
 		padding: 0 1em;
-		margin: 0;
+		margin: 5px 0;
 		background: $emerald;
 	}
 
