product detail properties table

--- a/app/pages/product-detail/product-detail.scss
+++ b/app/pages/product-detail/product-detail.scss
@@ -101,11 +101,13 @@
 
 	.propName {
 		float: left;
+		width: 45%;
 	}
 
 	.propValue {
-		float: right;
-		max-width: 50%;
+		float: left;
+		text-align: left;
+		max-width: 55%;
 		white-space: normal;
 	}
 
