--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,6 +11,7 @@
 @import "../pages/campaign-detail/campaign-detail.scss";
 @import "../pages/product-detail/product-detail.scss";
 @import "../pages/image-detail/image-detail.scss";
+@import "../pages/settings/settings.scss";
 
 // Bonami fonts
 @font-face {
