MEerging with  newsletters and magazine

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,6 +12,10 @@
 @import "../pages/product-detail/product-detail.scss";
 @import "../pages/image-detail/image-detail.scss";
 @import "../pages/settings/settings.scss";
+@import "../pages/newsletter/newsletter";
+@import "../pages/magazine/magazine";
+@import "../pages/settings/settings.scss";
+@import "../pages/article-detail/article-detail.scss";
 
 // Bonami fonts
 @font-face {
